# memlord-apikey

./: .env.example  README.md  memlord-root-path-design.md  pyproject.toml
docs/plans/: 2026-05-27-azure-ad-sso-design.md  2026-05-27-azure-ad-sso-plan.md
docs/superpowers/plans/: 2026-05-26-api-key-auth.md  2026-05-28-root-path.md
docs/superpowers/specs/: 2026-05-26-api-key-auth-design.md  2026-05-28-root-path-design.md
migrations/versions/: 2026_05_26_0001-7e2e8e52e1c5439a_create_api_keys.py  2026_05_27_0001-a1b2c3d4e5f7_azure_sso_user_fields.py
src/memlord/: auth.py  config.py  main.py  oauth.py  sso.py
src/memlord/api/: workspaces.py
src/memlord/dao/: __init__.py  api_key.py  user.py
src/memlord/models/: __init__.py  api_key.py  user.py
src/memlord/schemas/: __init__.py  api_key.py
src/memlord/templates/: base.html  forgot_password.html  index.html  login.html  memory.html  register.html  reset_password.html  search.html  settings.html  verify_email.html  workspace_detail.html  workspace_join.html  workspace_new.html  workspaces.html
src/memlord/ui/: __init__.py  api_keys.py  login.py  utils.py
tests/: test_api_key.py  test_azure_sso.py  test_root_path.py
