[project]
name = "memlord"
dynamic = ["version"]
description = "MCP server for storing and searching memory"
readme = "README.md"
license = { file = "LICENSE" }
license-expression = "AGPL-3.0-only"
requires-python = "==3.12.*"
dependencies = [
    "asyncpg>=0.29.0",
    "alembic>=1.18.4",
    "authlib>=1.3.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.1",
    "fastmcp>=3.1.0",
    "onnxruntime>=1.20.0",
    "pgvector>=0.3.0",
    "pydantic-settings>=2.7.0",
    "dateparser>=1.2.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "tokenizers>=0.21.0",
    "greenlet>=3.3.2",
    "email-validator>=2.3.0",
    "bcrypt>=5.0.0",
    "aiosmtplib>=5.1.0",
    "itsdangerous>=2.2.0",
]

[project.scripts]
memlord = "memlord.main:main"

[dependency-groups]
dev = [
    "alembic-autogen-check",
    "ruff==0.15.*",
    "httpx",
    "pytest==9.*",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/memlord"]

[tool.coverage.run]
source = ["src/memlord"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
